jfrog/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: artifactory
  namespace: jfrog2
spec:
  host: artifactory.apps.vmopen.bynet.dev
  port:
    targetPort: 8082
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jfrog-artifactory 
    weight: 100
  wildcardPolicy: None
